# sfml-cmakelist-minimal-project

./: .gitignore  CMakeLists.txt  README.md  main.cpp
